--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "𝖱𝖾𝗆𝗈𝗏𝖾𝖽 1 𝖴𝗉 𝖵𝗈𝗍𝖾 ."
 admin_40 : "𝖴𝗉 𝖵𝗈𝗍𝖾𝖽 ."
 
 start_1 : "{0} 𝖨𝗌 𝖠𝗅𝗂𝗏𝖾 •────────────✦────────────•\n 🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻\n•────────────✦────────────•\n\nTʜᴀɴᴋs Fᴏʀ Hᴀᴠɪɴɢ Mᴇ Iɴ {0} ! \n\n 🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻 Is Aʟɪᴠᴇ ❤‍🔥✨\n\nFᴏʀ Aɴʏ Assɪsᴛᴀɴᴄᴇ Oʀ Hᴇʟᴘ Cʜᴇᴄᴋᴏᴜᴛ ~ @cute_girl_support..\n\n<b>✫ 𝖴𝗉𝗍𝗂𝗆𝖾 :</b> {1}"
-start_2 : ""•────────────✦────────────•\n 🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻\n•────────────✦────────────•\n\n Hᴇʏ, {0} ~\n\n  🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻 Is Nᴏᴡ A Fᴀᴍᴏᴜs & Sᴀғᴇ Bᴏᴛ Fᴏʀ Pʟᴀʏɪɴɢ Mᴜsɪᴄ . \n\n◆ Yᴏᴜ Cᴀɴ Pʟᴀʏ Mᴜsɪᴄ Fʀᴏᴍ Yᴏᴜʀ YᴏᴜTᴜʙᴇ, Sᴘᴏᴛɪғʏ, Rᴇssᴏ, AᴘᴘʟᴇMᴜsɪᴄ & Sᴏᴜɴᴅᴄʟᴏᴜᴅ Tᴏo.\n\n**▰ ▰▰▰▰▰▰▰▰▰▰▰▰ ▰\n\n⪼ Iғ Yᴏᴜ Aʀᴇ Gᴇᴛᴛɪɴɢ Aɴʏ Issᴜᴇ Iɴ Yᴏᴜʀ Gʀᴏᴜᴘ Tʜᴇɴ Cᴏɴᴛᴀᴄᴛ Us Aᴛ @cute_girl_support**.\n\n▰ ▰▰▰▰▰▰▰▰▰▰▰▰"
+start_2 : "•────────────✦────────────•\n 🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻\n•────────────✦────────────•\n\n Hᴇʏ, {0} ~\n\n  🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻 Is Nᴏᴡ A Fᴀᴍᴏᴜs & Sᴀғᴇ Bᴏᴛ Fᴏʀ Pʟᴀʏɪɴɢ Mᴜsɪᴄ . \n\n◆ Yᴏᴜ Cᴀɴ Pʟᴀʏ Mᴜsɪᴄ Fʀᴏᴍ Yᴏᴜʀ YᴏᴜTᴜʙᴇ, Sᴘᴏᴛɪғʏ, Rᴇssᴏ, AᴘᴘʟᴇMᴜsɪᴄ & Sᴏᴜɴᴅᴄʟᴏᴜᴅ Tᴏo.\n\n**▰ ▰▰▰▰▰▰▰▰▰▰▰▰ ▰\n\n⪼ Iғ Yᴏᴜ Aʀᴇ Gᴇᴛᴛɪɴɢ Aɴʏ Issᴜᴇ Iɴ Yᴏᴜʀ Gʀᴏᴜᴘ Tʜᴇɴ Cᴏɴᴛᴀᴄᴛ Us Aᴛ @cute_girl_support**.\n\n▰ ▰▰▰▰▰▰▰▰▰▰▰▰"
 start_3 : "Tʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ 🌹\n{0}\n ◍━━•━━•●●•━━•━━◍\n\n𝘉𝘖𝘛 𝘜𝘚𝘈𝘎𝘌 ⚙️\n\n○ Mᴀᴋᴇ ᴍᴇ Aᴅᴍɪɴ Fɪʀsᴛ🎙\n\n○ `/play Yᴏᴜʀ Sᴏɴɢ Nᴀᴍᴇ`\n\nEɴᴊᴏʏ ʟᴀɢ ғʀᴇᴇ ᴍᴜsɪᴄ 🎶\n\n ◍━━•━━•●●•━━•━━◍\n\nBᴏᴛ's Assɪsᴛᴀɴᴛ ☆ \n\nAssɪsᴛᴀɴᴛ ɪᴅ ☆ \n ."
 start_4 : "🎄 <b>𝖲𝗎𝗉𝖾𝗋𝖦𝗋𝗈𝗎𝗉 𝖭𝖾𝖾𝖽𝖾𝖽</b> 🎄\n\n𝖯𝗅𝖾𝖺𝗌𝖾 𝖢𝗈𝗇𝗏𝖾𝗋𝗍 𝖸𝗈𝗎𝗋 <b>𝖦𝗋𝗈𝗎𝗉</b> 𝖳𝗈 <b>𝖲𝗎𝗉𝖾𝗋𝖦𝗋𝗈𝗎𝗉</b> 𝖠𝗇𝖽 𝖳𝗁𝖾𝗇 𝖠𝖽𝖽 𝖬𝖾 𝖠𝗀𝖺𝗂𝗇 .\n\n<b>𝖧𝗈𝗐 𝖳𝗈 𝖬𝖺𝗄𝖾 𝖲𝗎𝗉𝖾𝗋𝖦𝗋𝗈𝗎𝗉 ?</b>\n- 𝖬𝖺𝗄𝖾 𝖸𝗈𝗎𝗋 𝖦𝗋𝗈𝗎𝗉'𝗌 𝖢𝗁𝖺𝗍 𝖧𝗂𝗌𝗍𝗈𝗋𝗒 <b> 𝖵𝗂𝗌𝗂𝖻𝗅𝖾</b> 𝖮𝗇𝖼𝖾 ."
 start_5 : "<b>↝ 𝖡𝗅𝖺𝖼𝗄𝖫𝗂𝗌𝗍𝖾𝖽 𝖢𝗁𝖺𝗍𝗌 ↜</b>\n\n𝖳𝗁𝗂𝗌 𝖢𝗁𝖺𝗍 𝖨𝗌 𝖡𝗅𝖺𝖼𝗄𝖫𝗂𝗌𝗍𝖾𝖽 𝖮𝗇 {0} 𝖣𝖺𝗍𝖺𝖻𝖺𝗌𝖾 .\n𝖱𝖾𝗊𝗎𝖾𝗌𝗍 𝖠 <a href={1}>𝖲𝗎𝖽𝗈𝖴𝗌𝖾𝗋</a> 𝖳𝗈 𝖴𝗇𝖻𝗅𝖺𝖼𝗄𝖫𝗂𝗌𝗍 𝖸𝗈𝗎𝗋 𝖢𝗁𝖺𝗍 𝖮𝗋 𝖵𝗂𝗌𝗂𝗍 <a href={2}>𝖲𝗎𝗉𝗉𝗈𝗋𝗍 𝖢𝗁𝖺𝗍 .</a>"
