--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -118,7 +118,7 @@ set_cb_3 : "Gᴇᴛᴛɪɴɢ Aᴜᴅɪᴏ Qᴜᴀʟɪᴛʏ Pᴀɴᴇʟ...🎙️
 set_cb_4 : "Gᴇᴛᴛɪɴɢ Aᴜᴛʜ Usᴇʀs Pᴀɴᴇʟ...🎙️💫"
 set_cb_5 : "Gᴇᴛᴛɪɴɢ Cʟᴇᴀɴ Mᴏᴅᴇ Pᴀɴᴇʟ...🎙️💫"
 
-gstats_1 : "🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻 Gᴇᴛᴛɪɴɢ ɢʟᴏʙᴀʟ sᴛᴀᴛs...Tʜɪs ᴄᴏᴜʟᴅ ᴛᴀᴋᴇ sᴏᴍᴇ ᴛɪᴍᴇ..!!
+gstats_1 : "🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻 Gᴇᴛᴛɪɴɢ ɢʟᴏʙᴀʟ sᴛᴀᴛs...Tʜɪs ᴄᴏᴜʟᴅ ᴛᴀᴋᴇ sᴏᴍᴇ ᴛɪᴍᴇ..!!"
 gstats_2 : "𝖢𝗅𝗂𝖼𝗄 𝖮𝗇 𝖳𝗁𝖾 𝖡𝗎𝗍𝗍𝗈𝗇𝗌 𝖡𝖾𝗅𝗈𝗐 𝖳𝗈 𝖢𝗁𝖾𝖼𝗄 𝖳𝗁𝖾 𝖲𝗍𝖺𝗍𝗌 𝖮𝖿 {0} ."
 gstats_3 : "<b><u>{0} 𝖲𝗍𝖺𝗍𝗌 𝖠𝗇𝖽 𝖨𝗇𝖿𝗈𝗋𝗆𝖺𝗍𝗂𝗈𝗇 :</u></b>\n\n<b>𝖠𝗌𝗌𝗂𝗌𝗍𝖺𝗇𝗍𝗌 :</b> <code>{1}</code>\n<b>𝖡𝗅𝗈𝖼𝗄𝖾𝖽 :</b> <code>{2}</code>\n<b>𝖢𝗁𝖺𝗍𝗌 :</b> <code>{3}</code>\n<b>𝖴𝗌𝖾𝗋𝗌 :</b> <code>{4}</code>\n<b>𝖬𝗈𝖽𝗎𝗅𝖾𝗌 :</b> <code>{5}</code>\n<b>𝖲𝗎𝖽𝗈𝖾𝗋𝗌 :</b> <code>{6}</code>\n\n<b>𝖠𝗎𝗍𝗈 𝖫𝖾𝖺𝗏𝗂𝗇𝗀 𝖠𝗌𝗌𝗂𝗌𝗍𝖺𝗇𝗍 :</b> {7}\n<b>𝖯𝗅𝖺𝗒 𝖣𝗎𝗋𝖺𝗍𝗂𝗈𝗇 𝖫𝗂𝗆𝗂𝗍 :</b> {8} 𝖬𝗂𝗇𝗎𝗍𝖾𝗌"
 gstats_4 : "𝖳𝗁𝗂𝗌 𝖡𝗎𝗍𝗍𝗈𝗇 𝖨𝗌 𝖮𝗇𝗅𝗒 𝖥𝗈𝗋 𝖲𝗎𝖽𝗈𝖾𝗋𝗌 ."
