--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -164,14 +164,14 @@ ping_2 : "🏓 𝖯𝗈𝗇𝗀 : <code>{0}ᴍs</code>\n\n<b><u>{1} 𝖲𝗒𝗌
 queue_1 : "🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻"
 queue_2 : "Queued List Is Empty. No tracks found"
 queue_3 : "<u>Queued Tracks:</u>  [Checkout More Queued Tracks From Here]({0})"
-queue_4 : "☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★\n**🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻 Aᴅᴅᴇᴅ Tᴏ Qᴜᴇᴜᴇ #{0}\n\n‣ 𝖳𝗂𝗍𝗅𝖾 :</b> {1}\n<b>‣ 𝖣𝗎𝗋𝖺𝗍𝗂𝗈𝗇 :</b> {2} 𝖬𝗂𝗇𝗎𝗍𝖾𝗌\n<b>‣ 𝖱𝖾𝗊𝗎𝖾𝗌𝗍𝖾𝖽 𝖡𝗒 :</b> {3}"
+queue_4 : "☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★</b>\n\n<b>🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻 Aᴅᴅᴇᴅ Tᴏ Qᴜᴇᴜᴇ #{0}\n\n 🍷 𝐓𖽹𖽷𖾘𖽞  😻  :</b> {1}\n<b> 🍷 𝐃𖽪𖽷𖽖𖾓𖽹𖽙𖽡 😻 :</b> {2} 𝖬𝗂𝗇𝗎𝗍𝖾𝗌\n<b> 🍷 𝐏𖾘𖽖ʏ 𝀚 ʙʏ 😻 :</b> {3}☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★</b>\n\n<b>"
 queue_5 : "Oɴʟʏ ᴏɴᴇ ᴛʀᴀᴄᴋ ɪs ɪɴ ǫᴜᴇᴜᴇ....Aᴅᴅ sᴏᴍᴇ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ɪɴ ǫᴜᴇᴜᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇ...!"
 queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> 𝖴𝗇𝗄𝗇𝗈𝗐𝗇 𝖣𝗎𝗋𝖺𝗍𝗂𝗈𝗇 𝖲𝗍𝗋𝖾𝖺𝗆\n\n𝖢𝗅𝗂𝖼𝗄 𝖮𝗇 𝖳𝗁𝖾 𝖡𝗎𝗍𝗍𝗈𝗇 𝖡𝖾𝗅𝗈𝗐 𝖳𝗈 𝖦𝖾𝗍 𝖶𝗁𝗈𝗅𝖾 𝖰𝗎𝖾𝗎𝖾𝖽 𝖫𝗂𝗌𝗍 ."
 queue_7 : "\n𝖢𝗅𝗂𝖼𝗄 𝖮𝗇 𝖳𝗁𝖾 𝖡𝗎𝗍𝗍𝗈𝗇 𝖡𝖾𝗅𝗈𝗐 𝖳𝗈 𝖦𝖾𝗍 𝖶𝗁𝗈𝗅𝖾 𝖰𝗎𝖾𝗎𝖾𝖽 𝖫𝗂𝗌𝗍 ."
 queue_8 : "<b>{0} 𝖯𝗅𝖺𝗒𝖾𝗋</b>\n\n🎄 <b>𝖲𝗍𝗋𝖾𝖺𝗆𝗂𝗇𝗀 :</b> {1}\n\n🔗 <b>𝖲𝗍𝗋𝖾𝖺𝗆 𝖳𝗒𝗉𝖾 :</b> {2}\n🥀 <b> 𝖱𝖾𝗊𝗎𝖾𝗌𝗍𝖾𝖽 𝖡𝗒 :</b> {3}\n{4}"
 
-stream_1 : " ☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★\n<b> 🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻</b>\n\n<b>‣ 🍷 𝐓𖽹𖽷𖾘𖽞  😻 :</b> <a href={0}>{1}</a>\n<b>‣ 🍷 𝐃𖽪𖽷𖽖𖾓𖽹𖽙𖽡 😻 :</b> {2} 𝖬𝗂𝗇𝗎𝗍𝖾𝗌\n<b>‣ 🍷 𝐏𖾘𖽖ʏ 𝀚 ʙʏ 😻 :</b> {3} ☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★\n"
-stream_2 : "☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★\n<b> 🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻</b>\n\n<b>‣ 🍷 𝐒𖾓𖾖𖽞𖽖𖾕 𝀚 𝐓ʏ𖽳𖽞 😻 :</b> L𝗂𝗏𝖾 𝖲𝗍𝗋𝖾𝖺𝗆 [ 𝖴𝗋𝗅 ]\n<b>‣ 🍷 𝐏𖾘𖽖ʏ 𝀚 ʙʏ 😻 :</b> {0} ☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★\n"
+stream_1 : " ☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★</b>\n\n<b> 🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻</b>\n\n<b> 🍷 𝐏𖽙𖽮𖽞𖾖𖽴 𝐁ʏ 😻 𑂾   𝙸 ᴢ ᴢ ʏ ʏ ɪ ᴙ</b>\n\n<b> 🍷 𝐓𖽹𖽷𖾘𖽞  😻 :</b> <a href={0}>{1}</b>\n\n<b> 🍷 𝐃𖽪𖽷𖽖𖾓𖽹𖽙𖽡 😻 :</b> {2} 𝖬𝗂𝗇𝗎𝗍𝖾𝗌</b>\n\n<b> 🍷 𝐏𖾘𖽖ʏ 𝀚 ʙʏ 😻 :</b> {3}</b>\n\n<b> ☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★</b>\n\n<b>"
+stream_2 : "☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★</b>\n\n<b> 🍷 𝆺𝅥𓆩〭〬𝐂𖽪֟፝𖾓𖾝 ԍ𖽹𖾜֟፝𖾘 𝆺𝅥 😻</b>\n\n<b> 🍷 𝐒𖾓𖾖𖽞𖽖𖾕 𝀚 𝐓ʏ𖽳𖽞 😻 :</b> L𝗂𝗏𝖾 𝖲𝗍𝗋𝖾𝖺𝗆 [ 𝖴𝗋𝗅 ]</b>\n\n<b>🍷 𝐏𖾘𖽖ʏ 𝀚 ʙʏ 😻 :</b> {0}</b>\n\n<b> ☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★</b>\n\n<b>"
 
 CLOSE_BUTTON  : "🍷 𝐂𖾘𖽙𖾗𖾝  😻"
 BACK_BUTTON : "◁"
